package uk.gov.justice.digital.hmpps.hmppstier.domain

import java.io.Serializable
import java.math.BigDecimal
import java.time.LocalDate

data class DeliusInputs(
    val isFemale: Boolean,
    val rsrScore: BigDecimal,
    val ogrsScore: Int,
    val hasNoMandate: Boolean,
    val registrations: Registrations,
    val previousEnforcementActivity: Boolean,
    val latestReleaseDate: LocalDate?,
    val hasActiveEvent: Boolean,
) : Serializable
