package uk.gov.justice.digital.hmpps.hmppstier.jpa.entity

import jakarta.persistence.*
import org.springframework.data.annotation.LastModifiedDate
import org.springframework.data.jpa.domain.support.AuditingEntityListener
import java.time.LocalDateTime
import java.util.*

@Entity
@EntityListeners(AuditingEntityListener::class)
@Table(name = "tier_summary")
class TierSummaryEntity(
    @Id
    val crn: String,

    @Column
    var uuid: UUID,

    @Column
    var tier: String?,

    @Column
    var provisional: Boolean? = null,

    @Column
    var protectLevel: String,

    @Column
    var changeLevel: Int,

    @Column
    var unsupervised: Boolean,

    @Version
    val version: Long = 0,

    @LastModifiedDate
    var lastModified: LocalDateTime = LocalDateTime.now(),
)
